# trmt

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
examples/: builders.md  critter_highway.md  dotgrid.md  factory.md  matrix.md  pipedream.md  scaffold.md  transistor.md
nix/: package.nix
nix/modules/: home-manager.nix
src/: config.rs  machine.rs  main.rs  render.rs
src/config/: controls.rs  display.rs  mod.rs  simulation.rs  validation.rs
src/machine/: detection.rs  grid.rs  heads.rs  mod.rs  rules.rs
src/render/: effects.rs  grid.rs  mod.rs  ui.rs
