[package]
name = "trmt"
version = "0.2.1"
edition = "2024"
authors = ["cenonym <cenonym@proton.me>"]
description = "2D Turing machine (turmite) simulator for the terminal"
repository = "https://github.com/cenonym/trmt"
homepage = "https://github.com/cenonym/trmt"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["turmite", "turing-machine", "cellular-automaton", "simulation"]
categories = ["command-line-utilities", "simulation", "science", "visualization", "mathematics" ]
exclude = ["*.gif", "/.github"]

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rustc-hash = "2.0"