[package]
name = "trmt"
version = "0.6.0"
edition = "2024"
authors = ["cenonym <cenonym@proton.me>"]
description = "2D Turing machine (turmite) simulator for the terminal"
repository = "https://github.com/cenonym/trmt"
homepage = "https://github.com/cenonym/trmt"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["cli", "utility", "tui", "simulation", "generator"]
categories = ["command-line-utilities", "simulation", "science", "visualization", "mathematics" ]
exclude = ["*.gif", "/.github", "/examples", "/assets"]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rustc-hash = "2.0"